Placed back the profiles in pom.xml