@@ -39,7 +39,6 @@
         <em-services.version>2.0.0</em-services.version>
         <em-processes.version>2.0.0</em-processes.version>
         <em-war.version>2.0.0</em-war.version>
-        <data.source>mysql</data.source>
 
         <github.global.server>github</github.global.server>
 
@@ -69,10 +68,14 @@
         </dependency>
     </dependencies>
 
+
     <profiles>
 
         <profile>
             <id>mysql</id>
+            <properties>
+                <data.source>mysql</data.source>
+            </properties>
             <dependencies>
                 <dependency>
                     <groupId>mysql</groupId>
@@ -83,7 +86,13 @@
         </profile>
 
         <profile>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
             <id>mssql</id>
+            <properties>
+                <data.source>mssql</data.source>
+            </properties>
             <dependencies>
                 <dependency>
                     <groupId>net.sourceforge.jtds</groupId>
@@ -164,12 +173,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.18.1</version>
-                <!-- forkMode and MaxPermSize are set to overcome OutOfMemory exceptions
-                    <configuration>
-                    <forkMode>once</forkMode>
-                    <argLine>-XX:MaxPermSize=128M</argLine>
-                    </configuration>
-                -->
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
